# PyAutoConf

./: .gitattributes  .gitignore  .url_check_allowlist.txt  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  eden.yaml  llms.txt  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: main.yml
autoconf/: __init__.py  directory_config.py  jax_wrapper.py  setup_colab.py  test_mode.py  workspace.py
autoconf/json_prior/: config.py  generate.py
autoconf/tools/: decorators.py
autonerves/: __init__.py  conf.py  csvable.py  dictable.py  directory_config.py  jax_wrapper.py  output.py  setup_colab.py  setup_notebook.py  test_mode.py  workspace.py
autonerves/json_prior/: config.py
autonerves/tools/: decorators.py
scripts/: convert_config.py  convert_prior_configs.py  edenise.py  generate_priors.py
test_autoconf/: test_cached_property_names.py  test_config.py  test_fitsable.py  test_jax_wrapper.py  test_setup_colab.py  test_test_mode.py  test_workspace.py
test_autoconf/json_prior/: test_config.py
test_autonerves/: conftest.py  test_cached_property_names.py  test_config.py  test_csvable.py  test_decorator.py  test_default.py  test_dictable.py  test_fitsable.py  test_jax_wrapper.py  test_output_config.py  test_setup_colab.py  test_test_mode.py  test_workspace.py
test_autonerves/json_prior/: test_config.py  test_generate.py  test_json_config.py
test_autonerves/tools/: test_decorators.py
