[build-system]
requires = ["setuptools>=79.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonerves"
dynamic = ["version"]
description = "PyAuto Configration"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "James Nightingale", email = "James.Nightingale@newcastle.ac.uk" },
    { name = "Richard Hayes", email = "richard@rghsoftware.co.uk" },
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
keywords = ["cli"]
dependencies = [
    "pathlib",
    "typing-inspect>=0.4.0",
    "PyYAML>=6.0.1",
    "numpy>=1.24.0,<3.0.0"
]

[project.urls]
Homepage = "https://github.com/PyAutoLabs/PyAutoConf"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["docs", "test_autonerves", "test_autonerves*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[project.optional-dependencies]
jax = [
    "jax>=0.7.0,<0.11.0; python_version >= '3.11'",
    "jaxlib>=0.7.0,<0.11.0; python_version >= '3.11'",
    "jaxnnls==1.0.1; python_version >= '3.11'"
]
optional = [
    "autonerves[jax]",
    "astropy>=5.0"
]
test = ["pytest"]
dev = ["pytest", "black"]

[tool.pytest.ini_options]
testpaths = ["test_autonerves"]
filterwarnings = [
    "ignore:cuda_plugin_extension:UserWarning",
    "ignore::DeprecationWarning:jax",
]